Fixed broken stylesheets

--- a/src/components/general-elements/header/header.scss
+++ b/src/components/general-elements/header/header.scss
@@ -1,3 +1,5 @@
-.header .flex * + h1 {
-	margin-left: 1rem;
+.wrapper > header .flex {
+	* + h1 {
+		margin-left: 1rem;
+	}
 }
